--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="work-item-inner">
               <img
                 src="img/thumb1.JPG"
-                data-large="img/large1.jpg"
+                data-large="img/large1.JPG"
                 alt="work"
               />
               <div class="overlay">
@@ -215,7 +215,7 @@
             <div class="work-item-inner">
               <img
                 src="img/thumb3.JPG"
-                data-large="img/large3.jpg"
+                data-large="img/large3.JPG"
                 alt="work"
               />
               <div class="overlay">
@@ -229,7 +229,7 @@
             <div class="work-item-inner">
               <img
                 src="img/thumb4.JPG"
-                data-large="img/large4.jpg"
+                data-large="img/large4.JPG"
                 alt="work"
               />
               <div class="overlay">
@@ -243,7 +243,7 @@
             <div class="work-item-inner">
               <img
                 src="img/thumb5.JPG"
-                data-large="img/large5.jpg"
+                data-large="img/large5.JPG"
                 alt="work"
               />
               <div class="overlay">
@@ -257,7 +257,7 @@
             <div class="work-item-inner">
               <img
                 src="img/thumb6.JPG"
-                data-large="img/large6.jpg"
+                data-large="img/large6.JPG"
                 alt="work"
               />
               <div class="overlay">
