Change brand name and update content in index.html
Updated the brand name from 'Patidar Studio' to 'RAM VISUALS' and modified various content sections including statistics and contact information.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="brand-name">
-            <a href="index.html">Patidar Studio.</a>
+            <a href="index.html">RAM VISUALS.</a>
           </div>
           <div class="nav-toggle">
             <span></span>
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="home-content">
-            <h4>PATIDAR STUDIO</h4>
+            <h4>RAM VISUALS</h4>
             <h1>Photography</h1>
           </div>
         </div>
@@ -72,21 +72,30 @@
               </div>
             </div>
             <p>
-              Hello, I'm Ramprasad Patidar, a professional photographer with 20 years of experience capturing moments and memories that last a lifetime. With a keen eye for detail and a passion for creating beautiful images, I particularly specialise in Wedding and portrait photography. I have my instagram page named as {PATIDAR STUDIO}. I also given the link below you can connect to me from their.Please get in touch and we'll start a conversation about what you're looking for and how I can help you. photography isn't our job. It isn't our career. It's our passion. Our cameras aren't tools, They are more like instruments meant to be played and bring concepts, thoughts, hopes and dreams to life..
+              Hello, I'm Ramprasad Patidar, a professional photographer with 20
+              years of experience capturing moments and memories that last a
+              lifetime. With a keen eye for detail and a passion for creating
+              beautiful images, I particularly specialise in Wedding and
+              portrait photography. I have my instagram page named as {RAM VISUALS}. I also given the link below you can connect to me from
+              their.Please get in touch and we'll start a conversation about
+              what you're looking for and how I can help you. photography isn't
+              our job. It isn't our career. It's our passion. Our cameras aren't
+              tools, They are more like instruments meant to be played and bring
+              concepts, thoughts, hopes and dreams to life..
             </p>
 
             <div class="stats">
               <div class="row">
                 <div class="stat-box">
-                  <h2>50</h2>
+                  <h2>300</h2>
                   <h5>Projects Done</h5>
                 </div>
                 <div class="stat-box">
-                  <h2>45</h2>
+                  <h2>300</h2>
                   <h5>Happy Clients</h5>
                 </div>
                 <div class="stat-box">
-                  <h2>250</h2>
+                  <h2>500</h2>
                   <h5>All Shoots</h5>
                 </div>
               </div>
@@ -188,8 +197,7 @@
               <img
                 src="img/thumb1.JPG"
                 data-large="img/large1.JPG"
-                alt="work"
-              />
+                alt="work" />
               <div class="overlay">
                 <h4>Prewedding Photography</h4>
               </div>
@@ -202,8 +210,7 @@
               <img
                 src="img/thumb2.jpg"
                 data-large="img/large2.jpg"
-                alt="work"
-              />
+                alt="work" />
               <div class="overlay">
                 <h4>Kids Photography</h4>
               </div>
@@ -216,8 +223,7 @@
               <img
                 src="img/thumb3.JPG"
                 data-large="img/large3.JPG"
-                alt="work"
-              />
+                alt="work" />
               <div class="overlay">
                 <h4>Wedding Photography</h4>
               </div>
@@ -230,8 +236,7 @@
               <img
                 src="img/thumb4.JPG"
                 data-large="img/large4.JPG"
-                alt="work"
-              />
+                alt="work" />
               <div class="overlay">
                 <h4>Prewedding Photography</h4>
               </div>
@@ -244,8 +249,7 @@
               <img
                 src="img/thumb5.JPG"
                 data-large="img/large5.JPG"
-                alt="work"
-              />
+                alt="work" />
               <div class="overlay">
                 <h4>Portrait Photography</h4>
               </div>
@@ -258,8 +262,7 @@
               <img
                 src="img/thumb6.JPG"
                 data-large="img/large6.JPG"
-                alt="work"
-              />
+                alt="work" />
               <div class="overlay">
                 <h4>Wedding Photography</h4>
               </div>
@@ -288,8 +291,7 @@
             <form
               action="https://formsubmit.co/978e270530768e337a3523012fadeece"
               method="POST"
-              class="form"
-            >
+              class="form">
               <div class="row">
                 <div class="left input-group">
                   <label>Full Name</label>
@@ -297,8 +299,7 @@
                     type="text"
                     name="name"
                     placeholder="Your Name Here"
-                    class="input-control"
-                  />
+                    class="input-control" />
                 </div>
                 <div class="right input-group">
                   <label>PhoneNo.</label>
@@ -306,8 +307,7 @@
                     type="text"
                     name="phone"
                     placeholder="Your Phone Here"
-                    class="input-control"
-                  />
+                    class="input-control" />
                 </div>
               </div>
               <div class="row">
@@ -316,8 +316,7 @@
                   <textarea
                     class="input-control"
                     name="message"
-                    placeholder="How can we help you?"
-                  ></textarea>
+                    placeholder="How can we help you?"></textarea>
                 </div>
               </div>
               <input type="hidden" name="_captcha" value="false">
@@ -333,19 +332,21 @@
               <!-- info item start -->
               <div class="info-item">
                 <h5>Address</h5>
-                <p>Vill.- Jadwasa Khurd, Madhya Pradesh, 457001</p>
+                <p>Ratlam, Madhya Pradesh, 457001</p>
               </div>
               <!-- info item end -->
               <!-- info item start -->
               <div class="info-item">
                 <h5>Phone</h5>
                 <p>+91 90094 05095</p>
+                <p>+91 90091 21202</p>
+                <p>+91 99932 89226</p>
               </div>
               <!-- info item end -->
               <!-- info item start -->
               <div class="info-item">
                 <h5>Email</h5>
-                <p>patidarstudiojadwasa@gmail.com</p>
+                <p>ramvisuals0@gmail.com</p>
               </div>
               <!-- info item end -->
             </div>
@@ -355,10 +356,9 @@
         <div class="row">
           <div class="social-links">
             <a
-              href="https://instagram.com/patidar_photography__?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"
-              title="instagram"
-              ><img src="img/instagram.svg" alt="instagram"
-            /></a>
+              href="https://www.instagram.com/ram.visuals_?igsh=MXJ0eWszYTNjaXI4Zg=="
+              title="instagram"><img src="img/instagram.svg"
+                alt="instagram" /></a>
           </div>
         </div>
       </div>
@@ -366,7 +366,7 @@
     <!-- Contact Section End -->
 
     <!-- copyright text -->
-    <p class="copyright">&copy; 2023 by Dev.AyushPatidar</p>
+    <p class="copyright">&copy; 2025 by WebDev. Ayushpatidar</p>
 
     <!-- lightbox start -->
     <div class="lightbox">
